@@ -22,6 +22,7 @@ import org.graylog.testing.mongodb.MongoDBExtension;
 import org.graylog.testing.mongodb.MongoDBTestService;
 import org.graylog.testing.mongodb.MongoJackExtension;
 import org.graylog2.bindings.providers.MongoJackObjectMapperProvider;
+import org.graylog2.database.MongoCollections;
 import org.graylog2.indexer.migration.LogEntry;
 import org.graylog2.indexer.migration.LogLevel;
 import org.joda.time.DateTime;
@@ -30,6 +31,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
+import java.util.Collections;
 import java.util.List;
 
 @ExtendWith(MongoDBExtension.class)
@@ -41,12 +43,12 @@ class RemoteReindexMigrationServiceImplTest {
     @BeforeEach
     void setUp(MongoDBTestService mongodb,
                MongoJackObjectMapperProvider mongoJackObjectMapperProvider) {
-        migrationService = new RemoteReindexMigrationServiceImpl(mongodb.mongoConnection(), mongoJackObjectMapperProvider);
+        migrationService = new RemoteReindexMigrationServiceImpl(new MongoCollections(mongoJackObjectMapperProvider, mongodb.mongoConnection()));
     }
 
     @Test
     void testCreateReadUpdate() {
-        MigrationConfiguration migration = migrationService.saveMigration(MigrationConfiguration.forIndices(List.of("index_1", "index_2", "errors_1")));
+        MigrationConfiguration migration = migrationService.saveMigration(MigrationConfiguration.forIndices(List.of("index_1", "index_2", "errors_1"), Collections.emptyList()));
         final String migrationID = migration.id();
         Assertions.assertThat(migration)
                 .satisfies(m -> Assertions.assertThat(m.id()).isNotEmpty())
@@ -75,7 +77,7 @@ class RemoteReindexMigrationServiceImplTest {
 
     @Test
     void testLogs() {
-        MigrationConfiguration migration = migrationService.saveMigration(MigrationConfiguration.forIndices(List.of("index_1", "index_2", "errors_1")));
+        MigrationConfiguration migration = migrationService.saveMigration(MigrationConfiguration.forIndices(List.of("index_1", "index_2", "errors_1"), Collections.emptyList()));
         migrationService.appendLogEntry(migration.id(), new LogEntry(DateTime.now(DateTimeZone.UTC), LogLevel.INFO, "info entry"));
         migrationService.appendLogEntry(migration.id(), new LogEntry(DateTime.now(DateTimeZone.UTC), LogLevel.ERROR, "error entry"));
         Assertions.assertThat(migrationService.getMigration(migration.id()))
@@ -86,4 +88,12 @@ class RemoteReindexMigrationServiceImplTest {
                             .contains("info entry", "error entry");
                 });
     }
+
+    @Test
+    void testLatestMigrationId() {
+        MigrationConfiguration migration1 = migrationService.saveMigration(MigrationConfiguration.forIndices(List.of("index_1", "index_2"), Collections.emptyList()));
+        MigrationConfiguration migration2 = migrationService.saveMigration(MigrationConfiguration.forIndices(List.of("index_3", "index_4"), Collections.emptyList()));
+        Assertions.assertThat(migrationService.getLatestMigrationId()).hasValue(migration2.id());
+    }
+
 }
